--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.525.0",
+    "mongoose": "^8.16.5",
     "next": "15.4.4",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
